test/json1.l1.out
error: invalid json primitive: server
            json2val	(builtin function)
               entry	(json1.l1:1)
