test/json1.l1
json2val("[ server, \"foofoofoo\" ]");
